--- a/text.css
+++ b/text.css
@@ -1,5 +1,5 @@
 *{
-    box-sizing:content-box;
+     box-sizing:border-box; 
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
 }
@@ -13,11 +13,11 @@ body{
 
 
 .wrap{
-    max-width: 1220px;
+    max-width: 1400px;
     margin-left: auto;
     margin-right: auto;
 
-}
+} 
 
 .heading{
     display: flex;
@@ -60,9 +60,8 @@ nav li :hover{
     animation-timing-function:ease-in;
     animation-iteration-count:infinite;
     color:lightgreen;
-    /* padding-bottom: 30px; */
     font-size: 2.5rem;
-    /* font-weight: bold; */
+
 }
 
 
@@ -84,11 +83,11 @@ nav li :hover{
 
 }
 
-p{
+ p{
     font-size: 20px;
     color: white;
 
-}
+ }
 
 button{
     width: 10rem;
@@ -102,18 +101,18 @@ button{
     cursor: pointer;
 }
 
- @media screen and (max-width:510px){
+  @media screen and (max-width:510px){
     
 
 
     body{
-        /* background-color: blueviolet; */
+        
         margin: 0;
         padding: 0;
     }
 
  .wrap{
-    /* background-color: aquamarine; */
+    
     width: 100%;
 
     }
@@ -129,7 +128,7 @@ button{
 content: url("./assets/elite\ 2.jfif");
 width: 400px;
 height: 400px;
-/* margin-left: 30px; */
+
 
 }
 
@@ -137,8 +136,8 @@ height: 400px;
     display: flex;
     flex-wrap:wrap-reverse;
     justify-content: center;
-    /* margin-bottom: 70px;
-     */
+     margin-bottom: 70px;
+    
 
 }
 
@@ -161,4 +160,4 @@ button{
 
 
 
-} 
+}  
